kubernetes/apps/ai/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
