kubernetes/apps/ai/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "open-webui.${domain}"
      secretName: "tls-open-webui"
  rules:
    - host: "open-webui.${domain}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 8080
